fix config and head file

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://sailaway.github.io
-title: saiaway的博客
+title: sailaway的博客
 subtitle: 不积跬步，无以至千里
 author: sailaway
 simple_search: https://aol.com/search
