--- a/_config.yml
+++ b/_config.yml
@@ -64,10 +64,13 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user:sailaway
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
+
+twitter_user:
+twitter_tweet_button: false
 
 # Google +1
 google_plus_one: false
